--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
@@ -19,10 +19,18 @@
       "dom"
     ],
     "paths": {
-      "src/*": ["src/*"],
-      "components/*": ["src/app/components/*"],
-      "pages/*": ["app/pages/*"],
-      "utils/*": ["src/app/utils/*"]
-  },
+      "src/*": [
+        "src/*"
+      ],
+      "components/*": [
+        "src/app/components/*"
+      ],
+      "pages/*": [
+        "app/pages/*"
+      ],
+      "utils/*": [
+        "src/app/utils/*"
+      ]
+    },
   }
 }
