--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -15,6 +15,15 @@
       ],
       "utils/*": [
         "src/app/utils/*"
+      ],
+      "services/*" :[
+        "src/app/services/*"
+      ],
+      "models/*":[
+        "src/app/models/*"
+      ],
+      "directives/*": [
+        "src/app/directives/*"
       ]
     }
   },
