--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,15 @@
       ],
       "utils/*": [
         "src/app/utils/*"
+      ],
+      "services/*" :[
+        "src/app/services/*"
+      ],
+      "models/*":[
+        "src/app/models/*"
+      ],
+      "directives/*": [
+        "src/app/directives/*"
       ]
     },
   }
